--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,2 @@
-Learning Rails
-  ==
-  Learning Rails with a tutorial from the RailsApps project.
+Learning Rails ==
+Learning Rails with a tutorial from the RailsApps project.
